Modificacion de las rutas del index y agregar detalleProducto

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> 
+<link rel="stylesheet" href="../css/styles.css"> 
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
-                <img src="../public/menu.png" class="img-menu" alt="Menú desplegable">
+                <img src="../recursos/menu.png" class="img-menu" alt="Menú desplegable">
             </label>
             
             <div class="search-bar">
@@ -54,55 +54,55 @@
 
     <section class="productos">
         <div class="producto">
-            <img src="../public/chocolate.jfif" alt="Producto 1">
+            <img src="../recursos/chocolate.jfif" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/caramelo.jfif" alt="Producto 1">
+            <img src="../recursos/caramelo.jfif" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/golosinas.jfif" alt="Producto 1">
+            <img src="../recursos/golosinas.jfif" alt="Producto 1">
             <h3>Producto 2</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/chocolate.jfif" alt="Producto 1">
+            <img src="../recursos/chocolate.jfif" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/caramelo.jfif" alt="Producto 1">
+            <img src="../recursos/caramelo.jfif" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/golosinas.jfif" alt="Producto 1">
+            <img src="../recursos/golosinas.jfif" alt="Producto 1">
             <h3>Producto 2</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/chocolate.jfif" alt="Producto 1">
+            <img src="../recursos/chocolate.jfif" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/caramelo.jfif" alt="Producto 1">
+            <img src="../recursos/caramelo.jfif" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
         </div>
         <div class="producto">
-            <img src="../public/golosinas.jfif" alt="Producto 1">
+            <img src="../recursos/golosinas.jfif" alt="Producto 1">
             <h3>Producto 2</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
