--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css"> 
+    <link rel="stylesheet" href="./css/styles.css"> 
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
-                <img src="../recursos/menu.png" class="img-menu" alt="Menú desplegable">
+                <img src="./recursos/menu.png" class="img-menu" alt="Menú desplegable">
             </label>
             
             <div class="search-bar">
@@ -54,7 +54,7 @@
 
     <section class="productos">
         <div class="producto">
-            <img src="../recursos/chocolate.jfif" alt="Producto 1">
+            <img src="./recursos/chocolate.jfif" alt="Producto 1">
             <h3>Producto 1</h3>
             <p>Descripción del producto 1.</p>
             <button>Comprar</button>
@@ -120,6 +120,8 @@
         <div class="social-media">
             <a href="#">Síguenos en Facebook</a>
             <a href="#">Síguenos en Instagram</a>
+            <h1 class="contact-info">Visitanos</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10564.816851871525!2d-103.34011800061518!3d20.57879280593822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428b2ca3d0ab4df%3A0xf736fea037b0a9b9!2sAv%20Siempre%20Viva%2C%20Vista%20Hermosa%2C%2045618%20San%20Pedro%20Tlaquepaque%2C%20Jal.%2C%20M%C3%A9xico!5e0!3m2!1ses!2sar!4v1713362570996!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
 </body>
